5948 - fixing styling issue with the filter accordion spacing

--- a/app/static/_scss/components/_filter-sidebar.scss
+++ b/app/static/_scss/components/_filter-sidebar.scss
@@ -130,12 +130,7 @@
 
 .filter-accordion__secondary {
     display: block;
-    min-height: calc(0.75rem * 1.3 + 0.5rem);
     width: 100%;
-}
-
-.filter-accordion__secondary-spacer {
-    display: block;
 }
 
 .filter-accordion__subtitle {
